syntax = "proto3";

package protocol;

enum EOpcode
{
	EOPCODE_INVAILD = 0;			// 无效协议
	EOPCODE_HEARTBEAT_REQ = 1;			// 心跳请求
	EOPCODE_HEARTBEAT_RSP = 2;			// 心跳应答
	EOPCODE_Test_REQ = 3;
	EOPCODE_Test_RSP = 4;

}

message SHead
{
    EOpcode msgid = 1;			// 消息ID
	uint32 reqseq = 2;				// 请求序号
	EErrno errcode = 3;				// 错误码(应答消息有效，请求消息和通知消息无效)
}

enum EErrno
{
	ECSERRNO_SUCC = 0;						// 操作成功
}

message TestReq {
	string name = 1;
	uint32 id = 2;
}

message TestRsp {
	string name = 1;
	uint32 id = 2;
}